--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
-
+body {
+  line-height: 1.6;
+  font-weight: 400;
+  color: #484848;
+  font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
+  font-size: 14px;
+}
 
 /*# sourceMappingURL=style.css.map */
