--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,15 +71,20 @@ header {
 .body .address .list-address {
   margin-top: 20px;
 }
-.body .address .list-address .item-address {
-  margin-top: 20px;
-}
 .body .address .list-address .item-address span {
   color: #45894e;
   margin-right: 10px;
 }
 .body .address .list-address .item-address span i {
   margin-right: 5px;
+}
+.body .address .list-address .item-address span .map {
+  display: -webkit-box;
+  height: 45px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .body .address .list-address .item-address a {
   font-size: 15px;
