--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -76,12 +76,19 @@ header{
     .list-address{
       margin-top: 20px;
       .item-address{
-        margin-top: 20px;
         span{
           color: #45894e;
           margin-right: 10px;
           i{
             margin-right: 5px;
+          }
+          .map{
+            display: -webkit-box;
+            height: 45px;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            text-overflow: ellipsis;
+            overflow: hidden;
           }
         }
         a{
